--- a/main.ipynb
+++ b/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Building a Recurrent Neural Network (RNN) from Scratch in NumPy for Text Generation\n",
+    "# Building a Recurrent Neural Network (RNN) from Scratch in Python for Text Generation\n",
     "\n",
     "**Author** Niklas Wicklund\n",
     "\n",
